--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
                 <div class="col-md-1">
                     <p class="nav-link"> <a href="#filters">Filters</a> </p>
                 </div>
+                <div class="col-md-1">
+                    <p class="nav-link"> <a href="#special">Special</a> </p>
+                </div>
                 <div class="col-md-3 col-md-offset-2">
                     <select ng-model="selectedUser" class="form-control login" ng-options="opt as opt.name for opt in users">
                     </select>
@@ -86,6 +89,7 @@
     <script type="text/javascript" src="scripts/calendar.controller.js"></script>
     <script type="text/javascript" src="scripts/main.controller.js"></script>
     <script type="text/javascript" src="scripts/filter.controller.js"></script>
+    <script type="text/javascript" src="scripts/special.controller.js"></script>
     <script type="text/javascript" src="scripts/routes.js"></script>
     <script type="text/javascript" src="scripts/filters.service.js"></script>
 
