added some filter features

--- a/index.html
+++ b/index.html
@@ -46,7 +46,10 @@
                     <p class="nav-link"> <a href="#filters">Filters</a> </p>
                 </div>
                 <div class="col-md-1">
-                    <p class="nav-link"> <a href="#special">Special</a> </p>
+                    <p class="nav-link"> <a href="#advanced">Advanced</a> </p>
+                </div>
+                <div class="col-md-1">
+                    <p class="nav-link"> <a href="#heatmap">Heat map</a> </p>
                 </div>
                 <div class="col-md-3 col-md-offset-2">
                     <select ng-model="selectedUser" class="form-control login" ng-options="opt as opt.name for opt in users">
@@ -89,7 +92,8 @@
     <script type="text/javascript" src="scripts/calendar.controller.js"></script>
     <script type="text/javascript" src="scripts/main.controller.js"></script>
     <script type="text/javascript" src="scripts/filter.controller.js"></script>
-    <script type="text/javascript" src="scripts/special.controller.js"></script>
+    <script type="text/javascript" src="scripts/advanced.controller.js"></script>
+    <script type="text/javascript" src="scripts/heatmap.controller.js"></script>
     <script type="text/javascript" src="scripts/routes.js"></script>
     <script type="text/javascript" src="scripts/filters.service.js"></script>
 
