--- a/index.html
+++ b/index.html
@@ -21,8 +21,13 @@
     <!-- ================ANIMATIONS================ -->
     <link rel="stylesheet" type="text/css" href="styles/animate.css">
 
+    <!-- ================HEATMAP================ -->
+    <link rel="stylesheet" type="text/css" href="bower_components/cal-heatmap/cal-heatmap.css">
+
+
     <!-- ================CUSTOM STYLES================ -->
     <link rel="stylesheet" type="text/css" href="styles/core.css">
+
 
     <link rel="shortcut icon" href="favicon.ico">
 
@@ -48,7 +53,7 @@
                 <div class="col-md-1">
                     <p class="nav-link"> <a href="#advanced">Advanced</a> </p>
                 </div>
-                <div class="col-md-1">
+                <div class="col-md-2">
                     <p class="nav-link"> <a href="#heatmap">Heat map</a> </p>
                 </div>
                 <div class="col-md-3 col-md-offset-2">
@@ -87,6 +92,9 @@
     <script type="text/javascript" src="bower_components/fullcalendar/dist/fullcalendar.js"></script>
     <script type="text/javascript" src="bower_components/angular-bootstrap/ui-bootstrap.min.js"></script>
     <script type="text/javascript" src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
+    <script type="text/javascript" src="bower_components/d3/d3.js"></script>
+    <script type="text/javascript" src="bower_components/cal-heatmap/cal-heatmap.js"></script>
+    <script type="text/javascript" src="bower_components/angular-cal-heatmap-directive/dist/1.3.0/calHeatmap.min.js"></script>
 
     <!-- ================CONTROLLERS================ -->
     <script type="text/javascript" src="scripts/calendar.controller.js"></script>
@@ -96,6 +104,7 @@
     <script type="text/javascript" src="scripts/heatmap.controller.js"></script>
     <script type="text/javascript" src="scripts/routes.js"></script>
     <script type="text/javascript" src="scripts/filters.service.js"></script>
+
 
     <!-- ================SERVICES================ -->
     <script type="text/javascript" src="scripts/bookings.service.js"></script>
