--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     <link rel="stylesheet" type="text/css" href="styles/core.css">
     <link rel="stylesheet" type="text/css" href="bower_components/angular-toastr/dist/angular-toastr.min.css">
 
+    <base href="/abenteeism_booking_2/" />
+
 
     <link rel="shortcut icon" href="favicon.ico">
 
