--- a/index.html
+++ b/index.html
@@ -10,22 +10,22 @@
     <link href='http://fonts.googleapis.com/css?family=Roboto:500,100,300' rel='stylesheet' type='text/css'>
 
     <!-- ================BOOTSTRAP================ -->
-    <link rel="stylesheet" type="text/css" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="../bower_components/bootstrap/dist/css/bootstrap.min.css">
 
     <!-- ================ICONS================ -->
-    <link rel="stylesheet" type="text/css" href="bower_components/font-awesome/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="../bower_components/font-awesome/css/font-awesome.min.css">
 
     <!-- ================PLUGINS================ -->
-    <link rel="stylesheet" type="text/css" href="bower_components/fullcalendar/dist/fullcalendar.css">
-    <link rel="stylesheet" type="text/css" href="styles/animate.css">
-    <link rel="stylesheet" type="text/css" href="bower_components/cal-heatmap/cal-heatmap.css">
-    <link rel="stylesheet" type="text/css" href="styles/core.css">
-    <link rel="stylesheet" type="text/css" href="bower_components/angular-toastr/dist/angular-toastr.min.css">
-
-    <base href="/abenteeism_booking_2/" />
-
+    <link rel="stylesheet" type="text/css" href="../bower_components/fullcalendar/dist/fullcalendar.css">
+    <link rel="stylesheet" type="text/css" href="../styles/animate.css">
+    <link rel="stylesheet" type="text/css" href="../bower_components/cal-heatmap/cal-heatmap.css">
+    <link rel="stylesheet" type="text/css" href="../styles/core.css">
+    <link rel="stylesheet" type="text/css" href="../bower_components/angular-toastr/dist/angular-toastr.min.css">
 
     <link rel="shortcut icon" href="favicon.ico">
+
+    <base href="/absenteeism_booking_2/" />
+
 
     <title>DEMO: Absenteeism 2</title>
 
@@ -64,44 +64,44 @@
 
 
     <!-- ================JQUERY================ -->
-    <script src="bower_components/jquery/dist/jquery.min.js"></script>
+    <script src="../bower_components/jquery/dist/jquery.min.js"></script>
 
     <!-- ================LODASH================ -->
-    <script src="bower_components/lodash/lodash.min.js"></script>
+    <script src="../bower_components/lodash/lodash.min.js"></script>
 
     <!-- ================MOMENT================ -->
-    <script src="bower_components/moment/min/moment.min.js"></script>
+    <script src="../bower_components/moment/min/moment.min.js"></script>
 
     <!-- ================ANGULAR CORE================ -->
-    <script src="bower_components/angular/angular.min.js"></script>
-    <script src="bower_components/angular-route/angular-route.min.js"></script>
+    <script src="../bower_components/angular/angular.min.js"></script>
+    <script src="../bower_components/angular-route/angular-route.min.js"></script>
 
     <!-- ================ANGULAR PLUGINS================ -->
-    <script type="text/javascript" src="bower_components/angular-ui-calendar/src/calendar.js"></script>
-    <script type="text/javascript" src="bower_components/fullcalendar/dist/fullcalendar.js"></script>
-    <script type="text/javascript" src="bower_components/angular-bootstrap/ui-bootstrap.min.js"></script>
-    <script type="text/javascript" src="bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
-    <script type="text/javascript" src="bower_components/d3/d3.js"></script>
-    <script type="text/javascript" src="bower_components/cal-heatmap/cal-heatmap.js"></script>
-    <script type="text/javascript" src="bower_components/angular-cal-heatmap-directive/dist/1.3.0/calHeatmap.min.js"></script>
-    <script type="text/javascript" src="bower_components/angular-toastr/dist/angular-toastr.min.js"></script>
+    <script type="text/javascript" src="../bower_components/angular-ui-calendar/src/calendar.js"></script>
+    <script type="text/javascript" src="../bower_components/fullcalendar/dist/fullcalendar.js"></script>
+    <script type="text/javascript" src="../bower_components/angular-bootstrap/ui-bootstrap.min.js"></script>
+    <script type="text/javascript" src="../bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
+    <script type="text/javascript" src="../bower_components/d3/d3.js"></script>
+    <script type="text/javascript" src="../bower_components/cal-heatmap/cal-heatmap.js"></script>
+    <script type="text/javascript" src="../bower_components/angular-cal-heatmap-directive/dist/1.3.0/calHeatmap.min.js"></script>
+    <script type="text/javascript" src="../bower_components/angular-toastr/dist/angular-toastr.min.js"></script>
 
     <!-- ================ANGULAR CUSTOM CORE================ -->
-    <script src="scripts/app.js"></script>
-    <script type="text/javascript" src="scripts/routes.js"></script>
+    <script src="../scripts/app.js"></script>
+    <script type="text/javascript" src="../scripts/routes.js"></script>
 
     <!-- ================CONTROLLERS================ -->
-    <script type="text/javascript" src="scripts/controllers/calendar.controller.js"></script>
-    <script type="text/javascript" src="scripts/controllers/main.controller.js"></script>
-    <script type="text/javascript" src="scripts/controllers/filter.controller.js"></script>
-    <script type="text/javascript" src="scripts/controllers/advanced.controller.js"></script>
+    <script type="text/javascript" src="../scripts/controllers/calendar.controller.js"></script>
+    <script type="text/javascript" src="../scripts/controllers/main.controller.js"></script>
+    <script type="text/javascript" src="../scripts/controllers/filter.controller.js"></script>
+    <script type="text/javascript" src="../scripts/controllers/advanced.controller.js"></script>
 
     <!-- ================SERVICES================ -->
-    <script type="text/javascript" src="scripts/services/filters.service.js"></script>
-    <script type="text/javascript" src="scripts/services/bookings.service.js"></script>
-    <script type="text/javascript" src="scripts/services/database.service.js"></script>
-    <script type="text/javascript" src="scripts/services/notify.service.js"></script>
-    <script type="text/javascript" src="scripts/services/advancedfilters.service.js"></script>
+    <script type="text/javascript" src="../scripts/services/filters.service.js"></script>
+    <script type="text/javascript" src="../scripts/services/bookings.service.js"></script>
+    <script type="text/javascript" src="../scripts/services/database.service.js"></script>
+    <script type="text/javascript" src="../scripts/services/notify.service.js"></script>
+    <script type="text/javascript" src="../scripts/services/advancedfilters.service.js"></script>
 
 </body>
 
